# ainative-code

./: .codecov.yml  .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  .mcp.json  AINATIVE_PLATFORM_ANALYSIS.md  ANALYSIS_INDEX.md  ANALYSIS_START_HERE.md  ANALYSIS_SUMMARY.txt  BUGS_FIXED_SUMMARY.md  BUGS_FOUND_UAT.md  BUG_104_CODE_CHANGES.md  BUG_104_FIX_SUMMARY.md  BUG_104_TEST_REPORT.md  BUG_105_COMPREHENSIVE_FIX_REPORT.md  BUG_105_EXECUTIVE_SUMMARY.md  CHANGELOG.md  CI-CD-FILES.txt  CODE_OF_CONDUCT.md  COMPONENT_QUICK_REFERENCE.md  COMPREHENSIVE_TEST_REPORT_v0.1.10.md  CONTRIBUTING.md  COVERAGE_REPORT.md  CRITICAL_BUG_CGO_DISABLED.md  DEEP_CODEBASE_ANALYSIS.md  DETAILED_CHANGES_NEEDED.md  Dockerfile  FINAL_TEST_COVERAGE_REPORT.md  FIXES_ISSUES_99_96.md  ISSUE-94-SUMMARY.md  ISSUE_103_EXECUTIVE_SUMMARY.md  ISSUE_103_FINAL_REPORT.md  ISSUE_103_FIX_REPORT.md  ISSUE_103_PRODUCTION_API_TEST_REPORT.md  ISSUE_103_QUICK_REFERENCE.txt  ISSUE_107_FIX_REPORT.md  ISSUE_110_COMPREHENSIVE_REPORT.md  ISSUE_110_EXECUTIVE_SUMMARY.md  ISSUE_110_QUICK_REFERENCE.md  (+79 more)
python-backend/: .env.example  .gitignore  ISSUE_153_COMPLETION_REPORT.md  ISSUE_154_EXECUTIVE_SUMMARY.md  ISSUE_154_TDD_COMPLETION_REPORT.md  README.md  TDD_IMPLEMENTATION_REPORT.md  pyproject.toml  pytest.ini  requirements.txt  verify_issue_154.sh
python-backend/app/: __init__.py  main.py
python-backend/app/api/: ainative_client.py
python-backend/app/core/: config.py  logging.py
python-backend/app/models/: ai.py
python-backend/tests/: __init__.py  conftest.py  test_config.py  test_health.py  test_main.py
(+843 files in other folders)
